; ModuleID = '/home/carl/AnghaBench/os-tutorial/23-fixes/drivers/extr_screen.c_get_cursor_offset.c'
source_filename = "/home/carl/AnghaBench/os-tutorial/23-fixes/drivers/extr_screen.c_get_cursor_offset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@REG_SCREEN_CTRL = common dso_local global i32 0, align 4
@REG_SCREEN_DATA = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @get_cursor_offset() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @REG_SCREEN_CTRL, align 4
  %3 = call i32 @port_byte_out(i32 %2, i32 14)
  %4 = load i32, i32* @REG_SCREEN_DATA, align 4
  %5 = call i32 @port_byte_in(i32 %4)
  %6 = shl i32 %5, 8
  store i32 %6, i32* %1, align 4
  %7 = load i32, i32* @REG_SCREEN_CTRL, align 4
  %8 = call i32 @port_byte_out(i32 %7, i32 15)
  %9 = load i32, i32* @REG_SCREEN_DATA, align 4
  %10 = call i32 @port_byte_in(i32 %9)
  %11 = load i32, i32* %1, align 4
  %12 = add nsw i32 %11, %10
  store i32 %12, i32* %1, align 4
  %13 = load i32, i32* %1, align 4
  %14 = mul nsw i32 %13, 2
  ret i32 %14
}

declare dso_local i32 @port_byte_out(i32, i32) #1

declare dso_local i32 @port_byte_in(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
